<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_50"
    android:fillViewport="true"
    android:layoutDirection="ltr"
    android:overScrollMode="never"
    tools:context=".ui.fragment.LoginFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <carbon.widget.ImageView
            android:id="@+id/background_logo_1"
            android:layout_width="@dimen/_124sdp"
            android:layout_height="@dimen/_124sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:alpha="0.15"
            android:background="@color/colorPrimary"
            app:carbon_cornerRadius="@dimen/_62sdp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <carbon.widget.ImageView
            android:id="@+id/background_logo_2"
            android:layout_width="@dimen/_108sdp"
            android:layout_height="@dimen/_108sdp"
            android:alpha="0.30"
            android:background="@color/colorPrimary"
            app:carbon_cornerRadius="@dimen/_54sdp"
            app:layout_constraintBottom_toBottomOf="@id/background_logo_1"
            app:layout_constraintLeft_toLeftOf="@id/background_logo_1"
            app:layout_constraintRight_toRightOf="@id/background_logo_1"
            app:layout_constraintTop_toTopOf="@id/background_logo_1" />

        <carbon.widget.ImageView
            android:id="@+id/background_logo_3"
            android:layout_width="@dimen/_92sdp"
            android:layout_height="@dimen/_92sdp"
            android:alpha="0.60"
            android:background="@color/colorPrimary"
            app:carbon_cornerRadius="@dimen/_46sdp"
            app:layout_constraintBottom_toBottomOf="@id/background_logo_2"
            app:layout_constraintLeft_toLeftOf="@id/background_logo_2"
            app:layout_constraintRight_toRightOf="@id/background_logo_2"
            app:layout_constraintTop_toTopOf="@id/background_logo_2" />

        <carbon.widget.ImageView
            android:id="@+id/app_logo"
            android:layout_width="@dimen/_76sdp"
            android:layout_height="@dimen/_76sdp"
            android:background="@color/colorPrimary"
            android:padding="@dimen/_8sdp"
            android:scaleType="centerCrop"
            android:src="@drawable/student"
            app:carbon_cornerRadius="@dimen/_38sdp"
            app:carbon_tint="@color/white"
            app:layout_constraintBottom_toBottomOf="@id/background_logo_3"
            app:layout_constraintLeft_toLeftOf="@id/background_logo_3"
            app:layout_constraintRight_toRightOf="@id/background_logo_3"
            app:layout_constraintTop_toTopOf="@id/background_logo_3" />

        <TextView
            android:id="@+id/fragment_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_6sdp"
            android:fontFamily="@font/yekan_bakh_semi_bold"
            android:text="@string/user_registration"
            android:textColor="@color/black"
            android:textSize="@dimen/_16ssp"
            app:layout_constraintLeft_toLeftOf="@id/background_logo_1"
            app:layout_constraintRight_toRightOf="@id/background_logo_1"
            app:layout_constraintTop_toBottomOf="@id/background_logo_1" />

        <TextView
            android:id="@+id/registration_hint"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_marginRight="@dimen/_16sdp"
            android:fontFamily="@font/yekan_bakh_regular"
            android:text="@string/registration_hint"
            android:textColor="@color/black"
            android:textSize="@dimen/_11ssp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fragment_description" />

        <carbon.widget.ConstraintLayout
            android:id="@+id/layout_input_registration"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_16sdp"
            android:background="@color/white"
            app:carbon_cornerRadius="@dimen/_18sdp"
            app:carbon_elevation="@dimen/_4sdp"
            app:carbon_elevationShadowColor="@color/grey_500"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/registration_hint">

            <carbon.widget.ConstraintLayout
                android:id="@+id/layout_input_email"
                android:layout_width="0dp"
                android:layout_height="@dimen/_36sdp"
                android:layout_marginLeft="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_12sdp"
                android:layout_marginRight="@dimen/_12sdp"
                android:background="@color/fillEditText"
                app:carbon_cornerRadius="@dimen/_18sdp"
                app:carbon_stroke="@color/stroke"
                app:carbon_strokeWidth="@dimen/_1sdp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <EditText
                    android:id="@+id/input_email"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginLeft="@dimen/_12sdp"
                    android:layout_marginRight="@dimen/_12sdp"
                    android:autofillHints="emailAddress"
                    android:background="@color/transparent"
                    android:fontFamily="@font/yekan_bakh_regular"
                    android:gravity="center"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:maxLength="64"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textColorHint="@color/hint"
                    android:textSize="@dimen/_10ssp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </carbon.widget.ConstraintLayout>

            <carbon.widget.ConstraintLayout
                android:id="@+id/layout_input_password"
                android:layout_width="0dp"
                android:layout_height="@dimen/_36sdp"
                android:layout_marginLeft="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_6sdp"
                android:layout_marginRight="@dimen/_12sdp"
                android:background="@color/fillEditText"
                app:carbon_cornerRadius="@dimen/_18sdp"
                app:carbon_stroke="@color/stroke"
                app:carbon_strokeWidth="@dimen/_1sdp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/layout_input_email">

                <EditText
                    android:id="@+id/input_password"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginLeft="@dimen/_12sdp"
                    android:layout_marginRight="@dimen/_12sdp"
                    android:autofillHints="password"
                    android:background="@color/transparent"
                    android:fontFamily="@font/yekan_bakh_regular"
                    android:gravity="center"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:maxLength="64"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textColorHint="@color/hint"
                    android:textSize="@dimen/_10ssp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </carbon.widget.ConstraintLayout>

            <carbon.widget.ConstraintLayout
                android:id="@+id/layout_input_repeat_password"
                android:layout_width="0dp"
                android:layout_height="@dimen/_36sdp"
                android:layout_marginLeft="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_6sdp"
                android:layout_marginRight="@dimen/_12sdp"
                android:background="@color/fillEditText"
                app:carbon_cornerRadius="@dimen/_18sdp"
                app:carbon_stroke="@color/stroke"
                app:carbon_strokeWidth="@dimen/_1sdp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/layout_input_password">

                <EditText
                    android:id="@+id/input_repeat_password"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginLeft="@dimen/_12sdp"
                    android:layout_marginRight="@dimen/_12sdp"
                    android:autofillHints="password"
                    android:background="@color/transparent"
                    android:fontFamily="@font/yekan_bakh_regular"
                    android:gravity="center"
                    android:hint="@string/repeat_password"
                    android:inputType="textPassword"
                    android:maxLength="64"
                    android:textColor="@color/black"
                    android:textColorHint="@color/hint"
                    android:textSize="@dimen/_10ssp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </carbon.widget.ConstraintLayout>

            <carbon.widget.ConstraintLayout
                android:id="@+id/layout_input_name"
                android:layout_width="0dp"
                android:layout_height="@dimen/_36sdp"
                android:layout_marginLeft="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_6sdp"
                android:layout_marginRight="@dimen/_12sdp"
                android:background="@color/fillEditText"
                app:carbon_cornerRadius="@dimen/_18sdp"
                app:carbon_stroke="@color/stroke"
                app:carbon_strokeWidth="@dimen/_1sdp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/layout_input_repeat_password">

                <EditText
                    android:id="@+id/input_name"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginLeft="@dimen/_12sdp"
                    android:layout_marginRight="@dimen/_12sdp"
                    android:autofillHints="name"
                    android:background="@color/transparent"
                    android:fontFamily="@font/yekan_bakh_regular"
                    android:gravity="center"
                    android:hint="@string/name"
                    android:inputType="textPersonName"
                    android:maxLength="100"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textColorHint="@color/hint"
                    android:textSize="@dimen/_10ssp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </carbon.widget.ConstraintLayout>

            <carbon.widget.ConstraintLayout
                android:id="@+id/layout_input_family"
                android:layout_width="0dp"
                android:layout_height="@dimen/_36sdp"
                android:layout_marginLeft="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_6sdp"
                android:layout_marginRight="@dimen/_12sdp"
                android:background="@color/fillEditText"
                app:carbon_cornerRadius="@dimen/_18sdp"
                app:carbon_stroke="@color/stroke"
                app:carbon_strokeWidth="@dimen/_1sdp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/layout_input_name">

                <EditText
                    android:id="@+id/input_family"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginLeft="@dimen/_12sdp"
                    android:layout_marginRight="@dimen/_12sdp"
                    android:autofillHints="name"
                    android:background="@color/transparent"
                    android:fontFamily="@font/yekan_bakh_regular"
                    android:gravity="center"
                    android:hint="@string/family"
                    android:inputType="textPersonName"
                    android:maxLength="100"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textColorHint="@color/hint"
                    android:textSize="@dimen/_10ssp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </carbon.widget.ConstraintLayout>

            <carbon.widget.ConstraintLayout
                android:id="@+id/layout_register"
                android:layout_width="0dp"
                android:layout_height="@dimen/_36sdp"
                android:layout_marginLeft="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_12sdp"
                android:layout_marginRight="@dimen/_12sdp"
                android:layout_marginBottom="@dimen/_12sdp"
                android:background="@color/colorPrimary"
                android:layoutDirection="ltr"
                app:carbon_cornerRadius="@dimen/_18sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/layout_input_family">

                <carbon.widget.TextView
                    android:id="@+id/text_register"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:fontFamily="@font/yekan_bakh_semi_bold"
                    android:gravity="center"
                    android:layoutDirection="ltr"
                    android:text="@string/register"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_11ssp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.airbnb.lottie.LottieAnimationView
                    android:id="@+id/animation_view"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerInParent="true"
                    android:layout_gravity="center"
                    android:background="@android:color/transparent"
                    android:layoutDirection="ltr"
                    android:visibility="invisible"
                    app:lottie_autoPlay="true"
                    app:lottie_loop="true"
                    app:lottie_rawRes="@raw/animation_loading" />
            </carbon.widget.ConstraintLayout>
        </carbon.widget.ConstraintLayout>

        <TextView
            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:fontFamily="@font/yekan_bakh_light"
            android:text="@string/login_user"
            android:textColor="@color/black"
            android:textSize="@dimen/_10ssp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layout_input_registration" />

        <Space
            android:layout_width="0dp"
            android:layout_height="@dimen/_256sdp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/login" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>